booking: form: comment out starts_at_time/ends_at_time as its not actually used

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -25,8 +25,8 @@
         <div data-controller="kalendaeBookingSelector">
             <div class="twelve columns">
                 <div class="booking-period-selector"><div data-kalendae-container class="u-center"></div></div>
-                <%= f.hidden_field :starts_at_time, value: '12.12' %>
-                <%= f.hidden_field :ends_at_time, value: '12.12' %>
+                <%#= f.hidden_field :starts_at_time, value: '00.00' %>
+                <%#= f.hidden_field :ends_at_time,   value: '23.59' %>
 
                 <div class="booking-request-summary">
 
