--- a/app/views/users/edit_user_payment_account.html.erb
+++ b/app/views/users/edit_user_payment_account.html.erb
@@ -22,7 +22,7 @@
         <%= form_for( @user_payment_account, url: bank_account_users_path, html: { method: :post } ) do |f| %>
           <div class="row">
               <div class="eight columns">
-                <%# only show bank account form, if you have confirmed your phone with us. %>
+                <%# FIXME: only show bank account form, if you have confirmed your phone with us. %>
                 <%= f.label :bank_account_number, "Kontonummer" %>
                 <%= f.text_field :bank_account_number, { maxlength: 13, class: 'u-full-width' }  %>
                 <p>
