lint financial transaction list/overview

--- a/app/views/financial_transactions/_financial_transaction_list.html.erb
+++ b/app/views/financial_transactions/_financial_transaction_list.html.erb
@@ -1,37 +1,32 @@
-<%= render layout: "gray_box", locals: {title: "Transaksjonshistorikk Payin", id: "transaction_history_payin"} do %>
 
-<table>
-  <thead>
-    <td>Dato</td>
-    <td>Type</td>
-    <td>Hvem</td>
-    <td>Hva</td>
-    <td>Inn/Ut</td>
-    <td>Verdi</td>
-  </thead>
-  <tbody>
-    <%= render FinancialTransaction.from_user( current_user.id )  %>
-  </tbody>
-
-</table>
-
+<%= render layout: "gray_box", locals: {title: "Transaksjonshistorikk Payin wallet", id: "transaction_history_payin"} do %>
+  <table>
+    <thead>
+      <td>Dato</td>
+      <td>Type</td>
+      <td>Hvem</td>
+      <td>Hva</td>
+      <td>Inn/Ut</td>
+      <td>Verdi</td>
+    </thead>
+    <tbody>
+      <%= render FinancialTransaction.from_user( current_user.id )  %>
+    </tbody>
+  </table>
 <% end %>
 
-<%= render layout: "gray_box", locals: {title: "Transaksjonshistorikk Payout", id: "transaction_history_payout"} do %>
-
-<table>
-  <thead>
-    <td>Dato</td>
-    <td>Type</td>
-    <td>Hvem</td>
-    <td>Hva</td>
-    <td>Inn/Ut</td>
-    <td>Verdi</td>
-  </thead>
-  <tbody>
-    <%= render FinancialTransaction.to_user( current_user.id )  %>
-  </tbody>
-
-</table>
-
+<%= render layout: "gray_box", locals: {title: "Transaksjonshistorikk Payout wallet", id: "transaction_history_payout"} do %>
+  <table>
+    <thead>
+      <td>Dato</td>
+      <td>Type</td>
+      <td>Hvem</td>
+      <td>Hva</td>
+      <td>Inn/Ut</td>
+      <td>Verdi</td>
+    </thead>
+    <tbody>
+      <%= render FinancialTransaction.to_user( current_user.id )  %>
+    </tbody>
+  </table>
 <% end %>
