Added new partial for booking price info

--- a/app/views/bookings/_booking_price_summary.html.erb
+++ b/app/views/bookings/_booking_price_summary.html.erb
@@ -1,3 +1,4 @@
+<%# Probably deprecated by _price_summary %>
 <div class="booking-price-summary">
     <table>
         <tr class="booking-price-summary__row">
