user model: now has feedback_score/feedback_score_count as a property. default is zero. fixed views. Added job to recalculate it, and scheduled it to run every day at 1am.

--- a/app/views/users/_public_profile_feedback.html.erb
+++ b/app/views/users/_public_profile_feedback.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="public-profile-feedback__text-box">
         <h4>
-            <%= render 'shared/stars.html', rating: feedback.user.calculate_average_rating %>
+            <%= render 'shared/stars.html', rating: feedback.user.feedback_score %>
             <%= feedback.ad.display_title %>
         </h4>
         <p class="public-profile-feedback__description">
