--- a/app/views/bookings/_booking_heading_box.html.erb
+++ b/app/views/bookings/_booking_heading_box.html.erb
@@ -12,7 +12,7 @@
             <div class="booking-heading__details-holder">
                 <strong><%= link_to ad.user.display_name, user_path(user) %></strong>
                 <br>
-                <%= render('shared/stars.html', size: :normal, rating: user.calculate_average_rating ) %>
+                <%= render('shared/stars.html', size: :normal, rating: user.feedback_score ) %>
             </div>
         </div>
     </div>
