--- a/app/views/shared/_ad_title_box.html.erb
+++ b/app/views/shared/_ad_title_box.html.erb
@@ -11,7 +11,7 @@
 
             <strong>Leies ut av <%= link_to ad.user.display_name, user_path(ad.user) %></strong>
             <br>
-            <%= render('shared/stars.html', size: :normal, rating: ad.user.calculate_average_rating ) %>
+            <%= render('shared/stars.html', size: :normal, rating: ad.user.feedback_score ) %>
         </div>
 
     </div>
