--- a/app/views/shared/_feedback_item_box.html.erb
+++ b/app/views/shared/_feedback_item_box.html.erb
@@ -4,7 +4,7 @@
         <p><%= link_to feedback.from_user.display_name, user_path( feedback.from_user.id ) %></p>
     </div>
     <div class="nine columns feedback-item-box__body">
-        <%= render('shared/stars.html', rating: feedback.user.calculate_average_rating ) %>
+        <%= render('shared/stars.html', rating: feedback.user.feedback_score ) %>
         <%= l feedback.updated_at, format: :plendit_short_date %>
         på <%= link_to feedback.ad.display_title, ad_path( ad_to_param_pretty feedback.ad ) %>
        <p class="feedback-item-box__body">
