--- a/app/views/shared/_sidebar_profile_summary.html.erb
+++ b/app/views/shared/_sidebar_profile_summary.html.erb
@@ -1,5 +1,5 @@
 <div class="profile-sidebar-summary u-push-down">
     <%= avatar_image user, :huge %>
     <p><%= user.display_name %></p>
-    <%= render('shared/stars.html', rating: user.calculate_average_rating, num_ratings: user.received_feedbacks.size) %>
+    <%= render('shared/stars.html', rating: user.feedback_score, num_ratings: user.feedback_score_count) %>
 </div>
