--- a/app/views/accident_reports/index.html.erb
+++ b/app/views/accident_reports/index.html.erb
@@ -7,7 +7,7 @@
         <%= render partial: "form" %>
       <% end %>
     <% else %>
-      TRANSLATEME: there are no open valid bookings. Please contact <%= Plendit::Application.config.x.customerservice.email %> if you have any questions or issues.
+      Det finnes ingen eksisterende leieforhold. Ta kontakt med <%= Plendit::Application.config.x.customerservice.email %> hvis du har noen spørsmål eller opplever problemer.
 
     <% end %>
   </div>
