--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -142,8 +142,8 @@
 
         <p>
             <small>
-                TRANSLATEME: Her på "om meg" du kan fortelle litt mer om deg selv.
-                Denne blir vist på din offentlig profil side.
+                Her kan du skrive litt om deg selv.
+                Denne blir vist på din offentlig profil.
             </small>
         </p>
         <div class="row">
