clear link to plendit saldo and bank transfer page

--- a/app/views/users/payment/_payout_wallet_balance.html.erb
+++ b/app/views/users/payment/_payout_wallet_balance.html.erb
@@ -1,7 +1,7 @@
 <%= render layout: "gray_box", locals: {title: "Din Plendit-saldo", id: "payout_wallet_balance"} do %>
 
   <% if current_user.mangopay_provisioned? && current_user.user_payment_account.present? %>
-    TRANSLATEME: <%= link_to 'Se din Plendit payout-saldo og overfør penger til din bankkonto', payment_payout_users_path %>.
+    <%= link_to 'Se din Plendit saldo og overfør penger til din bankkonto', payment_payout_users_path %>.
   <% else %>
     For å motta penger må du verifisere din e-postadresse,  ditt telefonnummer og ha en
     gyldig bankkonto registrert hos oss.
