--- a/app/views/users/payment/_payout_summary_table.html.erb
+++ b/app/views/users/payment/_payout_summary_table.html.erb
@@ -1,6 +1,6 @@
 <table>
   <tr>
-    <td>Din plendit payout saldo</td>
+    <td>Din plendit utbetalingskonto saldo</td>
     <td><%= format_monetary_full @financial_transaction_payout[:amount] %></td>
   </tr>
 
@@ -27,7 +27,7 @@
 <% if current_user.user_payment_account.nil? %>
  Du må legge inn bankkonto før du kan overføre penger.
 <% elsif @financial_transaction_payout[:amount] == 0 %>
- Du trenger penger i din konto før du kan overføre.
+ Du trenger penger på din utbetalingskonto før du kan overføre.
 <% elsif @financial_transaction_payout[:amount] < @financial_transaction_payout[:fees] %>
-  Du må ha minst <%= format_monetary_full @financial_transaction_payout[:fees] %> i din lommebok før du kan overføre penger til din bankkonto.
+  Du må ha minst <%= format_monetary_full @financial_transaction_payout[:fees] %> på din utbetalingskonto før du kan overføre penger til din bankkonto.
 <% end %>
