Fixed selecting dates on ad page

--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -9,8 +9,8 @@
             <%# very synthetic form: %>
             <%= form_tag new_booking_path, method: :get do %>
                 <%= hidden_field_tag :ad_id, @ad.id %>
-                <%= hidden_field_tag :from_date, (Date.today + 7.days).iso8601 %>
-                <%= hidden_field_tag :to_date,   (Date.today + 8.days).iso8601 %>
+                <%= hidden_field_tag :from_date, nil, data: {from: ''} %>
+                <%= hidden_field_tag :to_date, nil, data: {to: ''} %>
 
                 <div class="ad-booking-box__calendar-holder" data-calendar>
                     <%= render partial: "unavailability", locals: {ad: @ad} %>
