change to day terminology

--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -1,7 +1,7 @@
 <div class="ad-booking-box">
     <h4 class="ad-booking-box__title">
     <%= number_to_currency_pretty ad.price %>
-        <span class="ad-booking-box__period">per døgn</span>
+        <span class="ad-booking-box__period">per dag</span>
     </h4>
 
     <div data-controller="listingCalendar">
@@ -43,4 +43,3 @@
         </div>
     </div>
 </div>
-
