--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -128,7 +128,7 @@
         <div class="u-push-down">
             <div class="main-price">
                 <%= f.fields_for :payin_rules, @ad.main_payin_rule do |mf| %>
-                    <%= mf.label :payin_amount_in_h, "Pris per døgn:", class: 'main-price__label' %>
+                    <%= mf.label :payin_amount_in_h, "Pris per dag:", class: 'main-price__label' %>
                     <%= mf.telephone_field :payin_amount_in_h, class: 'main-price__input-price' %>
                 <% end %>
             </div>
@@ -172,8 +172,8 @@
             <div class="price-adder">
 
                 <div class="help-box u-push-down">
-                    Pris per enkelt døgn må være minst 99 kr.
-                    Vil du gi en lavere døgnpris for lengre
+                    Pris per enkelt dag må være minst 99 kr.
+                    Vil du gi en lavere dagnpris for lengre
                     leieforhold kan du gjøre det her.
                 </div>
                 <div>
