Added another deprecation warning

--- a/app/views/bookings/_booking_price_summary.html.erb
+++ b/app/views/bookings/_booking_price_summary.html.erb
@@ -1,4 +1,4 @@
-<%# Probably deprecated by _price_summary %>
+<%# Probably deprecated by _price_summary and _booking_summary %>
 <div class="booking-price-summary">
     <table>
         <tr class="booking-price-summary__row">
