Account in-out translate

--- a/app/views/financial_transactions/_financial_transaction_list.html.erb
+++ b/app/views/financial_transactions/_financial_transaction_list.html.erb
@@ -1,5 +1,4 @@
-
-<%= render layout: "gray_box", locals: {title: "Transaksjonshistorikk Payin wallet", id: "transaction_history_payin"} do %>
+<%= render layout: "gray_box", locals: {title: "Transaksjonshistorikk innbetalingskonto", id: "transaction_history_payin"} do %>
   <table>
     <thead>
       <td>Dato</td>
@@ -15,7 +14,7 @@
   </table>
 <% end %>
 
-<%= render layout: "gray_box", locals: {title: "Transaksjonshistorikk Payout wallet", id: "transaction_history_payout"} do %>
+<%= render layout: "gray_box", locals: {title: "Transaksjonshistorikk utbetalingskonto", id: "transaction_history_payout"} do %>
   <table>
     <thead>
       <td>Dato</td>
