informing users where to find old booikings

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -4,8 +4,8 @@
     <div class="row">
         <div class="nine columns">
             <%= render layout: "gray_box", locals: {title: "Aktiviteter"} do %>
-                Under ser du nye forespørsler. Om du ser etter din historikk
-                finner du denne ved å <a href="#">klikke her.</a>
+                Under ser du dine siste aktiviteter. Om du ser etter gamle leieforhold
+                finner du det under <a href="#">leiehistorikk.</a>
             <% end %>
 
             <section class="u-push-down">
