Old vs new activeties

--- a/app/views/users/_new_requests_header_box.html.erb
+++ b/app/views/users/_new_requests_header_box.html.erb
@@ -1,2 +1,2 @@
-Under ser du nye forespørsler. Om du ser etter leiehistorikk,
-finner du denne ved å <a href="#">klikke her.</a>
+Under ser du dine siste aktiviteter. Om du ser etter gamle leieforhold,
+finner du det under <a href="#">leiehistorikk.</a>
