--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -6,46 +6,31 @@
 }
 
 .booking-heading {
-    min-height: 116px;
-
-    &__info-holder {
-        display: inline-block;
-        vertical-align: top;
-    }
+    display: flex;
+    align-items: flex-start;
 
     &__image-holder {
-        display: inline-block;
-        width: 100%;
-        margin-right: $standard-spacing;
-        vertical-align: top;
-
-        @media (min-width: 500px) {
-            width: 160px;
-        }
-
-        & > img {
-            width: 100%;
-        }
-    }
-
-    &__title {
-        padding: 0;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    &__user-box {
-        display: flex;
-        align-items: center;
-    }
-
-    &__avatar-holder {
         flex: 0 0 auto;
+        width: 270px;
+        padding-right: $standard-spacing * 2;
+        padding-top: 16px;
     }
 
-    &__details-holder {
-        flex: 1 0 auto;
-        margin-left: $standard-spacing;
+    &__info-holder {
+        flex: 1 1 auto;
+    }
+
+    &__image {
+        width: 100%;
+    }
+
+    @media (max-width: 600px) {
+        flex-direction: column-reverse;
+
+        &__image-holder {
+            width: 100%;
+            padding: 0;
+        }
     }
 }
 
