--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -11,9 +11,9 @@
 
     &__image-holder {
         flex: 0 0 auto;
-        width: 270px;
+        width: 200px;
         padding-right: $standard-spacing * 2;
-        padding-top: 16px;
+        padding-top: 8px;
     }
 
     &__info-holder {
@@ -24,8 +24,17 @@
         width: 100%;
     }
 
+    &__user-box {
+        display: flex;
+    }
+
+    &__avatar-holder {
+        flex: 0 0 auto;
+        width: 76px;
+    }
+
     @media (max-width: 600px) {
-        flex-direction: column-reverse;
+        flex-direction: column;
 
         &__image-holder {
             width: 100%;
