--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -43,7 +43,6 @@
     }
 }
 
-
 .booking-insurance-box {
     &__title {
 
@@ -59,4 +58,19 @@
         vertical-align: top;
         margin-left: 80px;
     }
+}
+
+.rating-selector {
+    &__star {
+        display: inline-block;
+        width: 22px;
+        height: 22px;
+        background-image: url(star_empty.svg);
+     
+        &--full, &:hover {
+            background-image: url(star_full.svg);
+        }
+
+    }
+
 }
