Change footer to Information about plendit

--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -2,21 +2,15 @@
     <div class="container">
         <div class="row">
             <div class="four columns">
-                <h6 class="about-footer__title">Plendit AS</h6>
                 <ul class="about-footer__list">
-                    <li class="about-footer__list-item"><%= link_to 'Kontaktinformasjon', contact_path, class: "about-footer__list-link" %></li>
-                    <li class="about-footer__list-item"><%= link_to 'Om oss', about_us_path, class: "about-footer__list-link" %></li>
-                </ul>
-            </div>
-            <div class="four columns">
-                <h6 class="about-footer__title">Kundeservice</h6>
-                <ul class="about-footer__list">
+                    <li class="about-footer__list-item"><%= link_to 'Informasjon om Plendit', about_us_path, class: "about-footer__list-link" %></li>
                     <li class="about-footer__list-item"><%= link_to 'Ofte stilte spørsmål',  Rails.configuration.x.customerservice.website, target: '_blank', class: "about-footer__list-link" %></li>
-                    <li class="about-footer__list-item"><%= mail_to Rails.configuration.x.customerservice.email, nil, class: 'about-footer__list-link' %></li>
                 </ul>
             </div>
             <div class="four columns">
-                <h6 class="about-footer__title">Besøk oss på facebook</h6>
+                </div>
+            <div class="four columns">
+                <h6 class="about-footer__title">Plendit på facebook</h6>
                 <ul class="about-footer__list">
                     <% if Plendit::Application.config.x.footer.show_facebook_buttons %>
                         <li class="about-footer__list-item"><%= render partial: 'misc/facebook' %></li>
