--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,22 +1,29 @@
 <%= render partial: "shared/personal_bar", locals: { selected: "Forespørsler" } %>
 
 <div class="container">
-    <%= render partial: "shared/hero_image", locals: { ad: @booking.ad } %>
-    <%= render partial: "shared/ad_title_box", locals: { ad: @booking.ad } %>
+    <%= render partial: "booking_title" %>
 
-
-    <% if current_user.owns_booking_item? @booking %>
-        <h3 class="u-push-down"><%= @booking.from_user.display_name %> ønsker å leie av deg</h3>
-    <% else %>
-        <h3 class="u-push-down">Din forespørsel til <%= @booking.user.display_name %>.</h3>
-    <% end %>
-
-    <div class="row">
-        <div class="five columns">
-            <%= render partial: "booking_price_summary", locals: {booking: @booking} %>
-            <%= render partial: "booking_controls", locals: {booking: @booking} %>
-        </div>
+    <div class="u-push-down">
+        <%= render partial: "booking_heading_box", locals: { ad: @booking.ad, user: @booking.ad.user } %>
     </div>
+
+    <div class="u-push-down">
+        <%= render partial: "booking_status_box" %>
+    </div>
+
+    <div class="u-push-down">
+        <%= render partial: "booking_summary" %>
+    </div>
+
+    <div class="u-push-down">
+        <%= render partial: "booking_feedback" %>
+    </div>
+
+    <div class="u-push-down">
+        <%= render partial: "booking_insurance_box" %>
+    </div>
+
+    <%= render partial: "booking_controls", locals: {booking: @booking} %>
 
     <!-- <hr> -->
     <%# FIXME: this belongs only in the first step of setting up a booking. so it now renders in the wrong place %>
