--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,14 +1,17 @@
 <h2 style='font-style: normal;font-weight: 700;Margin-bottom: 0;Margin-top: 0;font-size: 24px;line-height: 32px;font-family: "Lato",sans-serif;color: #44a8c7;text-align: left;'><span style="color:#2a96ff">Tilbakestilling av Plendit-passord</span></h2>
 
 <p style='font-style: normal;font-weight: 400;Margin-bottom: 10px;Margin-top: 16px;font-size: 15px;line-height: 24px;font-family: "Lato",sans-serif;color: #60666d;text-align: left;'>
-    Hei <%= @resource.email %>.
+    Hei <%= @resource.first_name %>.
 </p>
 
 <p style='font-style: normal;font-weight: 400;Margin-bottom: 10px;Margin-top: 16px;font-size: 15px;line-height: 24px;font-family: "Lato",sans-serif;color: #60666d;text-align: left;'>
-    Noen har bedt om en lenke for å endre passordet for Plendit.no -  Bruk lenken under for å:
-    <%= link_to 'Endre passord', edit_password_url(@resource, reset_password_token: @token) %>
+    Noen har bedt om en lenke for å endre passordet for <%= link_to 'Plendit.no', root_url %>.
 </p>
 
 <p>
-    Hvis du ikke har bedt om å endre passordet ditt, kan du ignorere denne e-posten.
+    <%= link_to 'Gå til endre passord', edit_password_url(@resource, reset_password_token: @token) %>.
+</p>
+
+<p>
+    Om dette ikke stemmer kan du ignorere denne e-posten.
 </p>
