--- a/app/views/application_mailer/booking_ends_at_soon__to_renter.html.erb
+++ b/app/views/application_mailer/booking_ends_at_soon__to_renter.html.erb
@@ -20,8 +20,8 @@
   Om du har spørsmål til <%= link_to sender_user.first_name, user_url( sender_user ) %> kan du kontakte han på telefonnummer <%= sender_user.phone_number %>.
 </p>
 <p>
-  Tips: Husk å sjekke tilstanden på tingen du leier når den leveres tilbake og at ingen skader har oppstått.
+  Om uthellet skulle være ute må dere huske  å fylle ut <%= link_to 'skadeskjema', users_accident_reports_url %> innen 48 timer etter skaden har skjedd.
 </p>
 <p>
-  Om uthellet skulle være ute må dere huske  å fylle ut <%= link_to 'skadeskjema', users_accident_reports_url %> innen 48 timer etter skaden har skjedd.
+  <b>Viktig:</b> Du må gå over <%= link_to @booking.ad.title, ad_url( @booking.ad ) %> sammen med utleier og se om eventuelle skader som er registret samsvarer med tilstanden på objektet. Dersom ikke, må eventuelle nye skader registreres i skadefeltet i bookingen. Leier du et kjøretøy, er det også viktig at dere registrer antall kjørte kilometer ved leiestart og leieslutt og eventuelle bompasseringer, bøter og drivsstoffskostander ved leieslutt. 
 </p>
