--- a/app/views/application_mailer/booking_starts_at_soon__to_owner.html.erb
+++ b/app/views/application_mailer/booking_starts_at_soon__to_owner.html.erb
@@ -28,5 +28,5 @@
 </p>
 
 <p>
-  Tips: Husk å sjekke tilstanden på tingen du leier når du møter opp og at denne samsvarer med opplysningene i annonsen.
+  <b>Viktig:</b> Du må gå over <%= link_to @booking.ad.title, ad_url( @booking.ad ) %> sammen med leietaker og se om eventuelle skader som er registret samsvarer med tilstanden på objektet. Dersom ikke, må eventuelle nye skader registreres i skadefeltet i bookingen. Leier du et kjøretøy, er det også viktig at dere registrer antall kjørte kilometer ved leiestart og leieslutt og eventuelle bompasseringer, bøter og drivsstoffskostander ved leieslutt. 
 </p>
