Fix misspelled word

--- a/app/views/application_mailer/booking_ends_at_soon__to_owner.html.erb
+++ b/app/views/application_mailer/booking_ends_at_soon__to_owner.html.erb
@@ -23,5 +23,5 @@
   Om uthellet skulle være ute må dere huske  å fylle ut <%= link_to 'skadeskjema', users_accident_reports_url %> innen 48 timer etter skaden har skjedd.
 </p>
 <p>
-  <b>Viktig:</b> Du må gå over <%= link_to @booking.ad.title, ad_url( @booking.ad ) %> sammen med leietaker og se om eventuelle skader som er registret samsvarer med tilstanden på objektet. Dersom ikke, må eventuelle nye skader registreres i skadefeltet i bookingen. Leier du et kjøretøy, er det også viktig at dere registrer antall kjørte kilometer ved leiestart og leieslutt og eventuelle bompasseringer, bøter og drivstoffkostander ved leieslutt. 
+  <b>Viktig:</b> Du må gå over <%= link_to @booking.ad.title, ad_url( @booking.ad ) %> sammen med leietaker og se om eventuelle skader som er registret samsvarer med tilstanden på objektet. Dersom ikke, må eventuelle nye skader registreres i skadefeltet i bookingen. Leier du et kjøretøy, er det også viktig at dere registrerer antall kjørte kilometer ved leiestart og leieslutt og eventuelle bompasseringer, bøter og drivstoffkostander ved leieslutt. 
 </p>
