--- a/app/views/ads/_ad_location_map.html.erb
+++ b/app/views/ads/_ad_location_map.html.erb
@@ -2,6 +2,7 @@
     <section class="ad-location-map u-push-down-only">
         <div class="ad-location-map__map"
              data-geolocation="<%= @ad.location.lat %>,<%= @ad.location.lon %>"
+             data-geoprecision="<%= @ad.geo_precision %>"
              data-controller="adMap">
         </div>
     </section>
