Uppercase shall not pass

--- a/app/views/financial_transactions/_financial_transaction_list.html.erb
+++ b/app/views/financial_transactions/_financial_transaction_list.html.erb
@@ -5,7 +5,7 @@
       <td>Type</td>
       <td>Hvem</td>
       <td>Hva</td>
-      <td>Inn/Ut</td>
+      <td>Inn/ut</td>
       <td>Verdi</td>
     </thead>
     <tbody>
@@ -21,7 +21,7 @@
       <td>Type</td>
       <td>Hvem</td>
       <td>Hva</td>
-      <td>Inn/Ut</td>
+      <td>Inn/ut</td>
       <td>Verdi</td>
     </thead>
     <tbody>
