--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -23,16 +23,16 @@
     <div class="row">
         <div class="eight columns">
           <%= render layout: "gray_box", locals: {title: "Betaling", id: "payment"} do %>
-            Du må verifisere din e-postadresse og ditt telefonnummer før du kan sende og motta penger. 
+            Du må verifisere din e-postadresse og ditt mobilnummer før du kan sende og motta penger. 
 
             <p>
-                <small>Når profilen din er komplett (inkl. addresse), og vi har bekreftet epost og mobiltelefon, kan du legge inn kontonummer, kredittkort og få betalt.</small>
+                <small>Når profilen din er komplett og vi har bekreftet din e-postadresse og ditt mobilnummer, kan du legge inn ditt kontonummer og ditt kredittkort.</small>
             </p>
-            Før du kan registrere ditt kontonummer, trenger vi følgende:
+            Før du kan registrere ditt kontonummer, må du:
             <ul>
-              <% unless current_user.email_verified? %> <li><%= link_to 'bekreftet epost', edit_users_path( anchor: 'personal-info' ) %> </li> <% end %>
-              <% unless current_user.phone_verified? %> <li><%= link_to 'bekreftet mobiltelefon', edit_users_path( anchor: 'personal-info' ) %></li> <% end %>
-              <% unless current_user.has_address? %> <li><%= link_to 'addresse', edit_users_path( anchor: 'personal-info' ) %></li><% end %>
+              <% unless current_user.email_verified? %> <li><%= link_to 'Bekrefte din e-postadresse.', edit_users_path( anchor: 'personal-info' ) %> </li> <% end %>
+              <% unless current_user.phone_verified? %> <li><%= link_to 'Bekrefte ditt mobilnummer.', edit_users_path( anchor: 'personal-info' ) %></li> <% end %>
+              <% unless current_user.has_address? %> <li><%= link_to 'Legge inn din adresse.', edit_users_path( anchor: 'personal-info' ) %></li><% end %>
             </ul>
           <% end %>
         </div>
